--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A simple Puppeteer screenshot API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npm install --omit=dev"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
